# pius-blog

./: .gitignore  Cargo.toml
.circleci/: config.yaml  config.yml
resources/: articles.json
resources/static/: reader.html
resources/templates/: frontpage.tera  highlighter.tera  macros.tera  root.tera  single-article.tera  style.tera
resources/templates/articles/: first-article.tera  src.rs
src/: error.rs  highlighter.rs  main.rs  model.rs  nonce.rs  stats.rs
templates/: highlighter.tera  macros.tera  root.tera  single-article.tera  style.tera
templates/articles/: first-article.tera
