[package]
name = "blog"
version = "0.1.0"
authors = ["Mathias Pius <contact@pius.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.0"
actix-files = "0.1.1"
tera = "0.11.20"
env_logger = "0.6"
serde = "1.0.94"
serde_json = "1.0.40"
dotenv = "0.14.1"
failure = "0.1.5"
combine = "3.8.1"