[package]
name = "bloggerino"
version = "0.1.0"
authors = ["Mathias Pius <contact@pius.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
syntect = "3.3.0"
serde = "1.0.102"
serde_json = "1.0.41"
failure = "0.1.6"
log = "0.4.8"
actix-web = "1.0.8"
actix-files = "0.1.7"
tera = "0.11.20"